<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.abraxas.findinfo</groupId>
    <artifactId>fi-juGe</artifactId>
    <packaging>pom</packaging>
    <version>2.8.2-SNAPSHOT</version>


    <name>Findinfo juGe VD</name>
    <description>Findinfo für das "Tribunal cantonal vaudois".</description>
    <url>http://abxbuild/findinfo/</url>
    <inceptionYear>2007</inceptionYear>
    <organization>
        <name>Abraxas Juris AG</name>
        <url>http://www.abraxas.ch</url>
    </organization>

    <scm>
        <developerConnection>scm:git:ssh://git@bitbucket.etat-de-vaud.ch/ojvmp/juge.git</developerConnection>
        <tag>2.0.39</tag>
    </scm>

    <properties>

        <!-- DevEx and Xfiles deploiements -->
        <xfile.url>http://exploitation.etat-de-vaud.ch/outils/web/ws/rest</xfile.url>
        <assembly.env>TBD</assembly.env>
        <assembly.finalName>${project.artifactId}-${project.version}</assembly.finalName>

        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>

        <devex-maven-plugin.version>1.1.1</devex-maven-plugin.version>
        <devex.configTag>master</devex.configTag>
        <devex.releaseVersion>${project.version}</devex.releaseVersion>
        <devex.deployUnit.private>findinfo</devex.deployUnit.private>
        <devex.deployUnit.pub>findinfopub</devex.deployUnit.pub>
        <devex.deployTarget>Tomcat9RHEL8</devex.deployTarget>

        <cei-maven-plugin.version>1.1.0</cei-maven-plugin.version>
        <xfile.group>dsi_pee</xfile.group>

        <!-- maven release plugin configuration for applications -->
        <release.goals>clean install</release.goals>
        <devex.profiles>devex.release,devex.in</devex.profiles>
        <release.profiles>not,xfile,${devex.profiles}</release.profiles>
        <!-- Les goals assembly:single et cei:upload sont deja pris par env.cei -->

        <devex.configTag>master</devex.configTag>
        <devex.releaseVersion>${project.version}</devex.releaseVersion>
        <!--
      <release.profiles>not,env.cei,devex.release,devex.in</release.profiles>
      <release.goals>clean install</release.goals>
      -->

        <maven-assembly-plugin.version>2.5.3</maven-assembly-plugin.version>


    </properties>

    <!--
    <issueManagement>
      <system>JIRA</system>
      <url>http://abxjira.grah.ch/</url>
    </issueManagement>
    -->


    <developers>
        <developer>
            <id>joerg</id>
            <name>Jörg Keller</name>
            <email>joerg.keller@abraxas.ch</email>
            <roles>
                <role>developer</role>
                <role>architect</role>
            </roles>
        </developer>
        <developer>
            <id>markus</id>
            <name>Markus Michael</name>
            <email>markus.michael@abraxas.ch</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <id>patrick</id>
            <name>Patrick Saladin</name>
            <email>patrick.saladin@abraxas.ch</email>
            <roles>
                <role>developer</role>
                <role>architect</role>
            </roles>
        </developer>
        <developer>
            <id>michi</id>
            <name>Michael Sutter</name>
            <email>michael.sutter@abraxas.ch</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <id>peter</id>
            <name>Peter Büchler</name>
            <email>peter.buechler@abraxas.ch</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <id>jochen</id>
            <name>Jochen Reger</name>
            <email>jochen.reger@abraxas.ch</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <id>matthias</id>
            <name>Matthias Meier</name>
            <email>matthias.meier@abraxas.ch</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <contributors>
        <contributor>
            <name>Martin Grah</name>
            <email>martin.grah@abraxas.ch</email>
        </contributor>
    </contributors>

    <modules>
        <module>fi-juGe-common</module>
        <module>fi-juGe-server</module>
        <module>fi-juGe-web</module>
        <!-- JDK11 is it useful??
        <module>fi-juGe-tools</module>
        -->
        <!-- DDU: For some reaosn this module needs first a deploeyment of juGe-server on Nexus.
         Then it dows not work if not pre-installed. Snake eating its own snake;
        Secondly, it looks to be a test server, thus supposdely not necessary for production server.

        That's why it's temporary disabled.'
        <module>fi-juGe-tools/app/wsmocksrv</module>
        -->
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.axis</groupId>
                <artifactId>axis</artifactId>
                <version>1.4</version>
            </dependency>

            <dependency>
                <groupId>org.apache.axis</groupId>
                <artifactId>axis-ant</artifactId>
                <version>1.4</version>
            </dependency>

            <dependency>
                <groupId>org.apache.axis</groupId>
                <artifactId>axis-jaxrpc</artifactId>
                <version>1.4</version>
            </dependency>

            <dependency>
                <groupId>org.apache.axis</groupId>
                <artifactId>axis-saaj</artifactId>
                <version>1.4</version>
            </dependency>

            <dependency>
                <groupId>axis</groupId>
                <artifactId>axis-wsdl4j</artifactId>
                <version>1.5.1</version>
            </dependency>

            <dependency>
                <groupId>bouncycastle</groupId>
                <artifactId>bcprov-jdk15</artifactId>
                <version>136</version>
            </dependency>

            <dependency>
                <groupId>javax.mail</groupId>
                <artifactId>mail</artifactId>
                <version>1.4</version>
            </dependency>

            <!--
            <dependency>
              <groupId>org.apache.ws.security</groupId>
              <artifactId>wss4j</artifactId>
              <version>1.5.4</version>
            </dependency>
            -->

            <dependency>
                <groupId>xalan</groupId>
                <artifactId>xalan</artifactId>
                <version>2.7.0</version>
            </dependency>

            <dependency>
                <groupId>xerces</groupId>
                <artifactId>xercesImpl</artifactId>
                <version>2.12.0</version>
            </dependency>

            <dependency>
                <groupId>xml-apis</groupId>
                <artifactId>xml-apis</artifactId>
                <version>1.3.03</version>
            </dependency>

            <dependency>
                <groupId>commons-discovery</groupId>
                <artifactId>commons-discovery</artifactId>
                <version>0.2</version>
            </dependency>

            <dependency>
                <groupId>org.apache.santuario</groupId>
                <artifactId>xmlsec</artifactId>
                <version>1.4.0</version>
            </dependency>


            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>2.3.1</version>
            </dependency>
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-core</artifactId>
                <version>2.3.0</version>
            </dependency>
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-impl</artifactId>
                <version>2.3.1</version>
            </dependency>
            <dependency>
                <groupId>javax.activation</groupId>
                <artifactId>activation</artifactId>
                <version>1.1</version>
            </dependency>


        </dependencies>
    </dependencyManagement>

    <build>
        <finalName>findinfo-${project.version}</finalName>
        <plugins>
            <plugin> <!-- JDK11 -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <release>11</release>
                </configuration>
            </plugin>

            <plugin>  <!-- JDK11 -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <!--
                  <argLine>
                    - -illegal-access=permit
                  </argLine>
                  -->
                <configuration>
                    <excludes>
                        <exclude>**/Test*.java</exclude>
                        <exclude>**/*DbTest.java</exclude>
                        <exclude>**/*DBTest.java</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>dashboard-maven-plugin</artifactId>
                <version>1.0.0-beta-1</version>
            </plugin>

            <!--
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
              <configuration>
                <archive>
                  <index>true</index>
                  <manifestEntries>
                    <Copyright-Company>${project.organization.name}</Copyright-Company>
                    <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
                    <Implementation-Version>${project.version}</Implementation-Version>
                    <Implementation-Title>${project.description}</Implementation-Title>
                  </manifestEntries>
                </archive>
              </configuration>
            </plugin>
            -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <archive>
                        <index>true</index>
                        <manifestEntries>s
                            <Copyright-Company>${project.organization.name}</Copyright-Company>
                            <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
                            <Implementation-Version>${project.version}</Implementation-Version>
                            <Implementation-Title>${project.description}</Implementation-Title>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptors>
                        <descriptor>fi-juGe-common\src\assembly\assemble.xml</descriptor>
                    </descriptors>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <doclint>none</doclint>
                    <encoding>utf-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <goals>${release.goals}</goals>
                    <releaseProfiles>${release.profiles}</releaseProfiles>
                    <tagNameFormat>@{project.version}</tagNameFormat>
                    <arguments>-Dmaven.javadoc.skip=true -Ddevex.configTag=${devex.configTag}</arguments>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <pushChanges>true</pushChanges>
                </configuration>
            </plugin>
        </plugins>
        <!-- JDK11
            <directory>${basedir}/build</directory>
            <outputDirectory>${basedir}/build/classes</outputDirectory>
            <testOutputDirectory>${basedir}/build/test-classes</testOutputDirectory>
            <testSourceDirectory>${basedir}/junit</testSourceDirectory>
            <sourceDirectory>${basedir}/src</sourceDirectory>
            <resources>
            -->
        <!-- DDU is it required?
                <resource>
                <directory>${basedir}/web</directory>
                </resource>
              <resource>
                <directory>${basedir}/rsc</directory>
              </resource>
            </resources>
        -->
        <!--
        <testResources>
          <testResource>
            <directory>${basedir}/junit</directory>
            <excludes>
              <exclude>**/*.java</exclude>
            </excludes>
          </testResource>
        </testResources>
        -->
    </build>

    <!-- =================
            PROFILES
    =================   -->
    <profiles>
        <profile>
            <id>integration</id>
            <build>
                <plugins>

                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>add-test-source</id>
                                <phase>generate-sources</phase>
                                <goals>
                                    <goal>add-test-source</goal>
                                </goals>
                                <configuration>
                                    <sources>
                                        <source>${basedir}/int-test</source>
                                        <source>${basedir}/sys-test</source>
                                    </sources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                </plugins>
            </build>
        </profile>
        <profile>
            <id>db.tests</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin.version}</version>
                        <configuration>
                            <includes>
                                <include>**/*DbTest.java</include>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!-- No Tests -->
            <id>not</id>
            <properties>
                <skipTests>true</skipTests>
                <skip.integration.tests>true</skip.integration.tests>
                <skip.unit.tests>true</skip.unit.tests>
            </properties>
        </profile>
        <!-- END DEVEX PROFILES -->

    </profiles>


    <distributionManagement>
        <repository>
            <id>nexus.releases</id>
            <name>Nexus releases</name>
            <url>${nexus.url.releases}</url>
        </repository>
        <snapshotRepository>
            <id>nexus.snapshots</id>
            <name>Nexus snaphots</name>
            <url>${nexus.url.snapshots}</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>


</project>
